CLEAN fix and suppress Java 9 compiler warnings